# reclass

./: .gitignore  README.md  config.yaml  config_russian.yaml  gemini_chunking_explanation.md  gemini_command_reference.md  gemini_debug_transcriber.md  gemini_ffmpeg_fix_guide.md  gemini_final_review.md  gemini_llm_testing_guide.md  gemini_log.md  gemini_merge_logic_guide.md  gemini_overlap_guide.md  gemini_prompt_update_guide.md  project.md  pyproject.toml  requirements.txt  startup.md  terminal.md  test.md
.obsidian/: workspace.json
class_recorder/: __init__.py  autofix.py  cli.py  config.py  config.yaml  debug_json.py  recorder.py  summarizer.py  summarizer_ru.py  test_quality.py  transcriber.py  utils.py
class_recorder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
recordings/.obsidian/: workspace.json
recordings/Math101/: 2025-10-04-Test.m4a  2025-10-04-Test.md  2025-10-04-Test.txt  2025-10-04-Test_timestamps.json
recordings/test101/: 2025-10-04-AI-course.md  2025-10-04-AI-course.txt  2025-10-04-AI-course_timestamps.json  Gemini Classroom output 2025-10-04.md  Gemini Guide 2025-10-04.md  Test 1.md
